test/method/not_found.lox
struct Foo {}

Foo().unknown() // error: undefined property 'unknown'
